Make next button floating, fix overscrolling on iphone pro max with big screen

--- a/src/TasksLearn.css
+++ b/src/TasksLearn.css
@@ -10,7 +10,7 @@
 .quiz-content {
     flex: 1;
     position: relative;
-    padding-bottom: 60px;
+    padding-bottom: 50vh;
 }
 
 .tasks-content {
@@ -315,11 +315,12 @@
     border-radius: 4px;
     padding: 8px 8px;
     cursor: pointer;
-    position: absolute;
-    bottom: 2vh;
-    right: 0vw;
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
     width: auto;
     min-width: 80px;
+    z-index: 100;
 
     color: #FFF;
     font-family: "PP Neue Machina";
@@ -331,9 +332,9 @@
 }
 
 .quiz-content .next-button {
-    position: absolute;
-    bottom: 2vh;
-    right: 0vw;
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
     width: auto;
     min-width: 80px;
     margin-top: 0;
